[package]
name = "nablo_shape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
bytemuck = { version = "1.14.0", features = [ "derive" ] }
time = { version = "0.3.30", features = [ "std", "wasm-bindgen", "macros", "serde" ]}
rayon = "1.8.0"
utf8_slice = "1.0.0"

[features]
default = []
vertexs = []
