[package]
name = "nablo_shape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
bytemuck = { version = "1.14.0", features = [ "derive" ] }
time = { version = "0.3.30", features = [ "std", "wasm-bindgen", "macros", "serde" ]}
rayon = "1.8.0"
utf8_slice = "1.0.0"
fontdue = "0.8.0"
once_cell = "1.19.0"
lyon = { version = "1.0.1", optional = true }
cfg-if = "1.0.0"

[features]
default = []
vertexs = ["lyon"]
